log
Mon 06 May 2024 07:00:18 PM UTC: 
 tests:  1|8
total_score: 0/70
c1f79a6
Mon 06 May 2024 07:06:26 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
713bb5f
Mon 06 May 2024 07:06:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
5744a44
Mon 06 May 2024 07:12:57 PM UTC: 
 treemap.c | 20 +++++++++++---------
 1 file changed, 11 insertions(+), 9 deletions(-)
 tests:  6|6
total_score: 5/70
28e854c
Mon 06 May 2024 07:35:27 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  0|0
826277b
Mon 06 May 2024 07:39:41 PM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  100 |     TreeNode *aux = tree->root;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
12f17db
Mon 06 May 2024 07:39:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 10/70
38d3f53
Mon 06 May 2024 07:42:58 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 10/70
86107ed
Tue 07 May 2024 03:56:51 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:119:15: error: unused variable ‘nextAux’ [-Werror=unused-variable]
  119 |     TreeNode *nextAux = tree->current;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5f05877
Tue 07 May 2024 03:57:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d15ad2b
Tue 07 May 2024 04:00:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|5
total_score: 10/70
626f8ce
Tue 07 May 2024 04:04:07 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|5
total_score: 10/70
75b6ae7
Tue 07 May 2024 04:05:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 10/70
e9b34af
Tue 07 May 2024 04:05:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 10/70
70eb3fa
Tue 07 May 2024 04:17:28 PM UTC: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  8|5
total_score: 10/70
e60e42d
Tue 07 May 2024 04:18:24 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|5
total_score: 10/70
4e2ccf4
Wed 08 May 2024 05:21:54 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 10/70
cd70ac7
Wed 08 May 2024 06:40:02 PM UTC: 
 treemap.c | 28 +++++++++++++---------------
 1 file changed, 13 insertions(+), 15 deletions(-)
 tests:  8|5
total_score: 10/70
71474fa
Wed 08 May 2024 06:41:30 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|5
total_score: 15/70
c1619a1
Wed 08 May 2024 06:42:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 15/70
57005a2
Wed 08 May 2024 06:43:03 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|5
total_score: 15/70
b071af0
Wed 08 May 2024 06:46:47 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|5
total_score: 15/70
d6398e4
Wed 08 May 2024 06:47:02 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|5
total_score: 15/70
4114710
Wed 08 May 2024 06:50:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 15/70
810413d
Wed 08 May 2024 07:06:46 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  12|5
total_score: 20/70
96981a7
Wed 08 May 2024 07:28:24 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|4
total_score: 25/70
2fa8592
Thu 09 May 2024 01:29:59 AM UTC: 
 treemap.c | 21 ---------------------
 1 file changed, 21 deletions(-)
 tests:  13|4
total_score: 25/70
32d4c0b
Thu 09 May 2024 01:34:35 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|4
total_score: 25/70
cfac999
Thu 09 May 2024 02:19:44 AM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
397922c
Thu 09 May 2024 02:20:07 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|4
total_score: 25/70
02664c1
Thu 09 May 2024 02:21:12 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|4
total_score: 25/70
72808e3
Thu 09 May 2024 02:26:18 AM UTC: 
 treemap.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  17|4
total_score: 25/70
482a2ed
Thu 09 May 2024 02:27:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
1c0517f
Thu 09 May 2024 02:27:59 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  17|4
total_score: 25/70
087488f
Thu 09 May 2024 02:35:02 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  17|4
total_score: 25/70
4704193
Thu 09 May 2024 02:36:02 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  17|4
total_score: 25/70
d1f6e30
Thu 09 May 2024 02:38:49 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:125:5: error: expected expression before ‘}’ token
  125 |     }
      |     ^
Compilation failed
60c8c98
Thu 09 May 2024 02:38:56 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
084520a
Thu 09 May 2024 02:39:29 AM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  17|4
total_score: 25/70
b665ae0
Thu 09 May 2024 02:40:07 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
234bf70
Thu 09 May 2024 02:40:40 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 25/70
4b0bf0b
Thu 09 May 2024 02:42:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
01efa28
Thu 09 May 2024 02:44:44 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  17|4
total_score: 25/70
0c11948
Thu 09 May 2024 02:44:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
381474e
Thu 09 May 2024 02:45:51 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 25/70
a7780de
Thu 09 May 2024 02:46:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
7f07b4b
Thu 09 May 2024 02:47:23 AM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:111:14: error: unused variable ‘num’ [-Werror=unused-variable]
  111 |         int *num = aux->pair->key;
      |              ^~~
treemap.c:108:10: error: unused variable ‘numaux’ [-Werror=unused-variable]
  108 |     int *numaux = key;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
dfadb08
Thu 09 May 2024 02:47:36 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  17|4
total_score: 25/70
a50f26c
Thu 09 May 2024 02:50:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|3
total_score: 35/70
0a013d7
Thu 09 May 2024 02:50:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|3
total_score: 35/70
3b3f8ef
Thu 09 May 2024 02:51:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|3
total_score: 35/70
90e002e
